# PyedpipeR

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: static.yml
docs/api_pydoctor_docs/: all-documents.html  apidocs-help.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  pyedpiper.__main__.html  pyedpiper.cli.html  pyedpiper.convert.html  pyedpiper.r_scripts.html  pyedpiper.r_scripts.r_pkg_creation.html  searchindex.json  undoccedSummary.html
scripts/: generate_docs.sh  run_coverage.sh
src/pyedpiper/: cli.py  convert.py  debug.ipynb
src/pyedpiper/r_scripts/: r_pkg_creation.py  tests.R
