[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyedpipeR"
version = "0.0.1"
description = "A Python package for turning Python packages into R packages"
authors = [{ name = "Ben Drucker", email = "ben.drucker@pnnl.gov" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pydoctor",
    "black"
]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "README.md"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyedpiper"]

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]